# django-clearcache

./: .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  pyproject.toml  tox.ini
.circleci/: config.yml
.github/workflows/: python-package.yml
clearcache/: apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
clearcache/management/commands/: clearcache.py
clearcache/migrations/: 0001_initial.py
clearcache/templates/admin/: index.html
clearcache/templates/clearcache/admin/: clearcache_form.html
clearcache/tests/: test_regular_user.py  test_superuser.py
test_project/: settings.py  urls.py  wsgi.py
