[tool.poetry]
name = "django-clearcache"
version = "1.0"
description = "Allows you to clear Django cache via admin UI or manage.py command"
authors = ["Tim Kamanin <tim@timonweb.com>"]
homepage = "https://timonweb.com"
repository = "https://github.com/timonweb/django-clearcache"

packages = [
    { include = "clearcache" }
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
