[tool.poetry]
name = "django-clearcache"
version = "1.1.0"
description = "Allows you to clear Django cache via admin UI or manage.py command"
authors = ["Tim Kamanin <tim@timonweb.com>"]
homepage = "https://timonweb.com"
repository = "https://github.com/timonweb/django-clearcache"
readme = "README.md"
packages = [
    { include = "clearcache" }
]

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
django = ">=2.2,<3.1"

[tool.poetry.dev-dependencies]
pytest-django = "^3.8.0"
pytest = "^5.3.4"
tox = "^3.14.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
